@@ -20,14 +20,13 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 
 
 #include <QtCore/QString>
-#include <QtCore/QMutex>
 #include "qspeedtestcli.h"
 
 
 const QString PROJECTNAME = "QSpeedTest";
 const QString PROGRAMNAME = "QSpeedTestCLI";
 const QString PROGRAMAUTHOR = "parsifal";
-const QString PROGRAMVERSION = "r3";
+const QString PROGRAMVERSION = "r4";
 const QString PROGRAMURL = "https://sourceforge.net/projects/qspeedtest/files/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest";
 const QString PROGRAMUPDATECHECKURL = "http://qspeedtest.sourceforge.net/updates/qspeedtestcli.version";
@@ -37,8 +36,6 @@ const int UPDATECHECKTIMEOUT = 3;
 const int PINGTIMEOUT = 1;
 const int DOWNLOADTESTSECS = 15;
 int PINGSPERTARGET = 4;
-QMutex MUTEX;
-qint64 BYTESDOWNLOADED;
 bool STOPBENCHMARK = false;
 int PARALLELPINGS = 4;
 
